<resources>
    <string name="app_name">AppMovilesNassican</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="forgotPassword">Olvidaste tu contraseña?</string>
    <string name="firstName">Nombre</string>
    <string name="lastName">Apellido</string>
    <string name="login">Iniciar sesión</string>
    <string name="createAct">Crear cuenta</string>
    <string name="email_hint">Email</string>
    <string name="send_password_reset">Enviar contraseña</string>
    <string name="aboutme">Creado por Jesús Benavides</string>
    <string name="hometext">Bienvenido al Anillo</string>
    <string name="signout">Cerrar Sesión</string>
</resources>