<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etEmail"
        style="@style/viewCustom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etPassword"
        style="@style/viewCustom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogin"
        style="@style/viewCustom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:onClick="login"/>

    <Button
        android:id="@+id/btnCreate"
        style="@style/viewCustom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/createAct"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:onClick="register"/>

    <TextView
        android:id="@+id/txtForgotPassword"
        style="@style/viewCustom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/forgotPassword"
        android:textSize="20sp"
        android:onClick="forgotPassword"/>
</LinearLayout>